language/move-lang/tests/move_check/parser/phantom_param_missing_type_var.move
module M {
    struct S<T1, phantom> {
        f1: u64
    }
}
